# letsplaygearcity

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  READMEKR.md  _b64_part1.txt  _wiki_chassis.txt  _wiki_engine.txt  _wiki_gearbox.txt  _wiki_vehicle.txt  crawler.py  parse_turn_events.py  project.md  pyproject.toml  selfdbquery.md  test_llm_call.py  test_prompt_size.py  test_token_debug.py  write_script.py
data/: turn_events_timeline.json
data/wiki/: design_ref_chassis.md  design_ref_engine.md  design_ref_gearbox.md  design_ref_vehicle.md
src/: db_agent.py  db_inspector.py  db_query_graph.py  design_formulas.py  event_timeline.py  graph_state.py  graph_utils.py  inspect_db.py  nodes_advisors.py  nodes_analysis.py  nodes_pipeline.py  prompts.py  queries.py  session_memory.py  test_env.py
